Some meager progress

--- a/ch/1-introduction.tex
+++ b/ch/1-introduction.tex
@@ -136,7 +136,7 @@ The first one is concerned with \emph{label bias} and the other two with \emph{s
   \item Thomas Kehrenberg, Zexun Chen, and Novi Quadrianto (2020). ``Tuning Fairness by Balancing Target Labels.''
     In: \emph{Frontiers in Artificial Intelligence} 3, p.\ 33.
     \citep{kehrenberg2020tuning}
-  \item Thomas Kehrenberg, Myles Bartlett, Oliver Thomas, and Novi Quadrianto (2020).
+  \item Thomas Kehrenberg, Myles Bartlett, Oliver Thomas, and Novi Quadrian\-to (2020).
     ``Null-sampling for Interpretable and Fair Representations.''
     In: \emph{Computer Vision - ECCV 2020}. Glasgow, UK: Springer International Publishing.
     \citep{kehrenberg2020nullsampling}
