--- a/paper2/1-introduction.tex
+++ b/paper2/1-introduction.tex
@@ -31,7 +31,7 @@ This will allow us to draw on a much more diverse pool of data to learn from.
 %nevertheless appears to improve fairness measures with respect to $s$.
 %However, as pointed out by \cite{locatello2019challenging},
 %some supervision or inductive bias is needed in order to recognise a well-disentangled representation.
-While annotations for $y$ are often hard to come by (and often noisy \cite{KehCheQua18}),
+While annotations for $y$ are often hard to come by (and often noisy \cite{kehrenberg2020tuning}),
 annotations for the sensitive attribute $s$ are usually less so, as $s$ can often be obtained from demographic information provided by census data.
 We thus consider the setting where the representation is learned from data
 that is only labelled with $s$ and not $y$.
